<resources>
    <string name="app_name">비상대응</string>
    <string name="action_settings">설정</string>
    <string name="action_notice_list">공지사항</string>
    <string name="action_notice_edit">공지사항</string>

    <!--메인화면의 버튼 이름-->
    <string name="rule">수칙</string>
    <string name="chat">채팅</string>
    <string name="emgt_contact">비상연락망</string>

    <string name="notice">공지사항</string>




    <!--For Test-->
    <!--Toolbar menus-->
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>

    <!--Drawer Menus-->
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="feed">My Feed</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--Login-->
    <string name="login_dummy">Login Dummy</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!--Login Validation-->
    <string name="empty_email">이메일은 필수 항목입니다</string>
    <string name="invalid_email">이메일을 정확히 입력해주세요</string>
    <string name="empty_password">비밀번호를 입력해 주세요</string>
    <string name="email_verification">이메일 인증을 다시 해주세요</string>
    <string name="email_verification_send_to">인증 메일을 발송하였습니다. 인증 링크를 확인해주세요</string>

    <!-- Setting Validation -->
    <string name="empty_name">이름을 입력하세요</string>
    <string name="empty_department">부서를 입력하세요</string>
    <string name="empty_tel">휴대전화 번호를 입력하세요</string>
    <string name="empty_etel">2차 비상연락번호를 입력하세요</string>

    <!-- OnBoarding -->
    <string name="transition_logo_onboarding_to_login_and_register">장애 및 보안 위기 비상대응</string>
    <string name="onboarding_title">비상위기 대응앱</string>
    <string name="onboarding_cta_register">계정 생성</string>


    <!-- Register -->
    <string name="hint_email_address">이메일</string>
    <string name="hint_password">비밀번호</string>
    <string name="register">계정생성</string>


    <!--about fragment-->
    <string name="project_info">This sample app implements MVP architecture using Dagger2, GreenDao, RxJava, FastAndroidNetworking and PlaceholderView</string>
    <string name="link_mvp_blog">1. https://blog.mindorks.com</string>
    <string name="link_mvp_repo">2. https://github.com/MindorksOpenSource/android-mvp-architecture</string>
    <string name="link_mindorks_blog">3. https://blog.mindorks.com</string>
    <string name="link_mindorks_repo">4. https://github.com/MindorksOpenSource</string>
    <string name="version">"version"</string>

    <!--rating dialog-->
    <string name="rate_us">Rate Us</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars.</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others, in knowing some good things about this app.</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_not_provided_error">Please provide us stars.</string>
    <string name="rating_thanks">Thank you!</string>

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>

    <!--button-->
    <string name="later">Later</string>
    <string name="submit">Submit</string>

    <!--feed-->
    <string name="title">My Feed</string>
    <string name="open_source">Open Source</string>
    <string name="blog">Blog</string>

    <!--empty state-->
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_notice_list">NoticeListActivity</string>
    <string name="title_activity_notice_reg">NoticeRegActivity</string>
</resources>
