<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="kr.co.niceinfo.qm.amanda.ui.activity.OnBoardingActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/material_design_keyline_one">

        <ImageView
            android:id="@+id/imageview_app_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_fire_alarm_192dp" />

        <TextView
            style="@style/OnBoardingTitle"
            android:layout_gravity="center_horizontal"
            android:text="@string/onboarding_title" />

        <Button
            android:id="@+id/login"
            style="@style/OnBoardingCtaLogin"
            android:layout_gravity="center_horizontal"
            android:text="@string/login" />

        <TextView
            android:id="@+id/register"
            style="@style/OnBoardingCtaRegister"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/material_design_keyline_one"
            android:text="@string/onboarding_cta_register" />
    </LinearLayout>


</FrameLayout>